# ruststack

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ANALYSIS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  Dockerfile.release  PLAN.md  README.md  RUSTSTACK_INTEGRATION_GUIDE.md  docker-compose.yml  plan.md  plan_phase0.md  plan_phase1.md  plan_phase2.md  plan_phase3.md  rustfmt.toml  tech_debt.md  test_iam_enforcement.sh  test_plan.md
.github/scripts/: integration_test.py
.github/workflows/: ci.yml  pypi.yml  release.yml
docs/: DOCKER_LAMBDA.md  INTEGRATION_TEST_PLAN.md
examples/: conftest.py  conftest_cli.py  test_integration.py
examples/flask-lambda/: README.md  app.py  deploy.sh  requirements.txt
ruststack/: Cargo.toml
ruststack-apigateway/: Cargo.toml
ruststack-apigateway/src/: handlers.rs  lib.rs  storage.rs
ruststack-auth/: Cargo.toml
ruststack-auth/src/: lib.rs  middleware.rs  sigv4.rs
ruststack-cli/: LICENSE  README.md  pyproject.toml
ruststack-cli/src/ruststack_cli/: __init__.py  __main__.py  cli.py  clients.py  downloader.py  fixtures.py  server.py
ruststack-cli/tests/: conftest.py  test_ruststack_cli.py
ruststack-cloudformation/: Cargo.toml
ruststack-cloudformation/src/: handlers.rs  lib.rs  storage.rs
ruststack-cognito/: Cargo.toml
ruststack-cognito/src/: handlers.rs  jwt.rs  lib.rs  storage.rs
ruststack-core/: Cargo.toml
ruststack-core/src/: account.rs  error.rs  lib.rs  request_id.rs
ruststack-dynamodb/: Cargo.toml
ruststack-dynamodb/src/: expression.rs  expression_tests.rs  handlers.rs  lib.rs  proxy.rs  server.rs  storage.rs  storage_tests.rs
ruststack-firehose/: Cargo.toml
ruststack-firehose/src/: handlers.rs  lib.rs  storage.rs
ruststack-iam/: Cargo.toml
ruststack-iam/src/: handlers.rs  lib.rs  middleware.rs  policy.rs  storage.rs
ruststack-lambda/: Cargo.toml
ruststack-lambda/src/: docker.rs  function.rs  handlers.rs  invocation.rs  lib.rs  runtime_api.rs  service.rs
ruststack-lambda/tests/: integration.rs
ruststack-py/: Cargo.toml  README.md  build.rs  pyproject.toml
ruststack-py/src/: lib.rs
ruststack-s3/: Cargo.toml
ruststack-s3/src/: handlers.rs  lib.rs  service.rs  xml.rs
ruststack-s3/src/storage/: ephemeral.rs  mod.rs  persistent.rs  tests.rs  traits.rs
ruststack-s3/tests/: integration.rs
ruststack-secretsmanager/: Cargo.toml
ruststack-secretsmanager/src/: handlers.rs  lib.rs  persistent.rs  storage.rs
ruststack-sns/: Cargo.toml
ruststack-sns/src/: handlers.rs  lib.rs  storage.rs
ruststack-sqs/: Cargo.toml
ruststack-sqs/src/: handlers.rs  lib.rs  storage.rs
ruststack-stepfunctions/: Cargo.toml
ruststack-stepfunctions/src/: handlers.rs  lib.rs  storage.rs
ruststack-test/: Cargo.toml
ruststack-test/src/: client.rs  lib.rs  server.rs
ruststack/src/: cloudwatch.rs  config.rs  main.rs  router.rs  server.rs
tests/: pyproject.toml
tests/dynamodb/: integration_tests.rs  mod.rs
tests/integration/: test_docker.py  test_inprocess.py
