[workspace]
resolver = "2"
members = [
    "ruststack",
    "ruststack-core",
    "ruststack-auth",
    "ruststack-s3",
    "ruststack-dynamodb",
    "ruststack-lambda",
    "ruststack-secretsmanager",
    "ruststack-iam",
    "ruststack-apigateway",
    "ruststack-firehose",
    "ruststack-sqs",
    "ruststack-sns",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruststack/ruststack"
rust-version = "1.75.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# HTTP / Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = { version = "1.1", features = ["full"] }
http = "1.0"
http-body-util = "0.1"
bytes = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_xml_rs = "0.6"
quick-xml = { version = "0.31", features = ["serialize"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto / Hashing
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
crc32fast = "1.3"
crc32c = "0.6"
hex = "0.4"
base64 = "0.21"

# Data structures
dashmap = "5.5"
parking_lot = "0.12"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Utilities
percent-encoding = "2.3"
url = "2.5"
regex = "1.10"
once_cell = "1.19"
form_urlencoded = "1.2"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Configuration
config = "0.14"
toml = "0.8"

# S3 framework (not using - implementing natively with axum)
# s3s = "0.10"

# Async trait
async-trait = "0.1"

# Docker (for Lambda)
bollard = "0.16"

# HTTP client (for DynamoDB proxy)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Testing
aws-config = "1.1"
aws-sdk-s3 = "1.12"
aws-sdk-dynamodb = "1.12"
aws-sdk-lambda = "1.12"
aws-smithy-types = "1.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow some pedantic lints
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
