[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ruststack-cli"
version = "0.1.2"
description = "CLI wrapper for RustStack - High-fidelity AWS local emulator"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
authors = [
    { name = "Edd Almond", email = "edd@eddalmond.com" }
]
requires-python = ">=3.9"
keywords = ["aws", "local", "emulator", "testing", "lambda", "s3", "dynamodb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "click>=8.1.0",
    "boto3>=1.28.0",
    "requests>=2.31.0",
    "platformdirs>=4.0.0",
    "semver>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
ruststack = "ruststack_cli.__main__:cli"

[tool.hatch.build.targets.wheel]
packages = ["ruststack_cli"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
