[package]
name = "ruststack-cloudformation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
serde_urlencoded = "0.7.1"

[dev-dependencies]
tokio = { workspace = true }
