[package]
name = "ruststack-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for RustStack"

[dependencies]
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true
base64.workspace = true
