[package]
name = "ruststack-dynamodb"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DynamoDB implementation for RustStack"

[dependencies]
ruststack-core = { path = "../ruststack-core" }

tokio.workspace = true
axum.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
dashmap.workspace = true
reqwest.workspace = true
regex-lite = "0.1"

[dev-dependencies]
aws-sdk-dynamodb.workspace = true
aws-config.workspace = true
