[package]
name = "ruststack-lambda"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lambda implementation for RustStack"

[dependencies]
ruststack-core = { path = "../ruststack-core" }

tokio.workspace = true
axum.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true
base64.workspace = true
sha2.workspace = true

# Docker
bollard.workspace = true

# Zip handling
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# Temp files for code extraction
tempfile = "3.10"

[dev-dependencies]
aws-sdk-lambda.workspace = true
aws-config.workspace = true
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[[test]]
name = "integration"
path = "tests/integration.rs"
