[package]
name = "ruststack-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "ruststack_py"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
ruststack-s3 = { path = "../ruststack-s3" }
ruststack-sqs = { path = "../ruststack-sqs" }
ruststack-sns = { path = "../ruststack-sns" }
ruststack-secretsmanager = { path = "../ruststack-secretsmanager" }
ruststack-firehose = { path = "../ruststack-firehose" }
ruststack-iam = { path = "../ruststack-iam" }
futures = "0.3"
bytes = "1"
serde = "1"
serde_json = "1"
