[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ruststack-py"
version = "0.1.0"
description = "Python bindings for RustStack - in-process AWS service emulation"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT OR Apache-2.0",
]

[tool.maturin]
