[package]
name = "ruststack-secretsmanager"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

ruststack-core = { path = "../ruststack-core" }

[dev-dependencies]
tokio = { workspace = true }
