[package]
name = "ruststack-test"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Test utilities for RustStack"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = "0.8"
portpicker = "0.1"

[dev-dependencies]
tokio = { workspace = true }
