[package]
name = "ruststack"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-fidelity AWS local emulator"

[dependencies]
ruststack-core = { path = "../ruststack-core" }
ruststack-auth = { path = "../ruststack-auth" }
ruststack-s3 = { path = "../ruststack-s3" }
ruststack-dynamodb = { path = "../ruststack-dynamodb" }
ruststack-lambda = { path = "../ruststack-lambda" }

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
http.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

clap.workspace = true
config.workspace = true
toml.workspace = true
serde.workspace = true

[dev-dependencies]
aws-config.workspace = true
aws-sdk-s3.workspace = true
